syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.JPA.grpc.lib";
option java_outer_classname = "HelloProto";



service Simple{
    rpc SayHello (HelloRequest) returns (HelloReply){

    }
}

message HelloRequest{
    string name = 1;
}

message HelloReply{
    string messagee = 2;
}